@@ -2,32 +2,26 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-SLOT="0"
-LICENSE="NOSA"
+EAPI=5
 
-KEYWORDS="~amd64 ~x86"
-
-DESCRIPTION="Growler-Thread is a pthread wrapper library."
+DESCRIPTION="Pthread wrapper library"
 HOMEPAGE="http://www.nas.nasa.gov/~bgreen/growler/"
 SRC_URI="${HOMEPAGE}/downloads/growler-thread-${PV}.tar.gz"
 
+SLOT="0"
+LICENSE="NOSA"
 IUSE="doc static"
+KEYWORDS="~amd64 ~x86"
 
 RDEPEND=">=dev-cpp/growler-link-0.3.7"
-
 DEPEND="${RDEPEND}
-		doc? ( app-doc/doxygen )"
+	doc? ( app-doc/doxygen )"
 
-src_compile() {
+DOCS=( README NEWS AUTHORS NOSA ChangeLog )
+
+src_configure() {
 	econf \
 		$(use_enable doc) \
 		$(use_enable static) \
-		--enable-fast-install \
-		|| die "could not configure"
-	emake || die "emake failed"
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "install failed"
-	dodoc README NEWS AUTHORS NOSA ChangeLog
+		--enable-fast-install
 }
