@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/growler-thread
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Nov 2014; Justin Lecher <jlec@gentoo.org> growler-thread-0.3.4.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   23 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
   growler-thread-0.3.4.ebuild:
